# echoregions

./: .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pypi.yml  pytest.yml
echoregions/regions2d/: evr_writer.py
notebooks/: Regions2D_get_vertices.ipynb
